ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Test_Result__c/Lab_Test_Result__c.object-meta.xml
<CustomObject>
    <description>This is to record lab test results for the Lab Sample.</description>
    <label>Lab Test Result</label>
    <nameField>
        <displayFormat>LTR-{0000000000}</displayFormat>
        <label>Lab Test Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lab Test Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>