ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Test_Result__c/fields/Lab_Sample__c.field-meta.xml
<CustomField>
    <fullName>Lab_Sample__c</fullName>
    <description>this is the lab sample that is tested.</description>
    <label>Lab Sample</label>
    <referenceTo>Lab_Sample__c</referenceTo>
    <relationshipLabel>Lab Test Results</relationshipLabel>
    <relationshipName>Lab_Test_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>