ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Test_Result__c/fields/Lab_Sample_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Lab_Sample_Approval_Status__c</fullName>
    <description>Lab Test are locked if the Lab Sample is approved. We need this field to get the status to there.</description>
    <formula>TEXT( Lab_Sample__r.Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Lab Test are locked if the Lab Sample is approved. We need this field to get the status to there.</inlineHelpText>
    <label>Lab Sample Approval Status</label>
    <type>Text</type>
</CustomField>