ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Test_Result__c/fields/Lab_Test__c.field-meta.xml
<CustomField>
    <fullName>Lab_Test__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This is the lab test that is to be run for the lab sample.</description>
    <label>Lab Test</label>
    <referenceTo>Lab_Test__c</referenceTo>
    <relationshipLabel>Lab Test Results</relationshipLabel>
    <relationshipName>Lab_Test_Results</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>