ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Test_Result__c/fields/N_A__c.field-meta.xml
<CustomField>
    <fullName>N_A__c</fullName>
    <defaultValue>false</defaultValue>
    <description>2020-02-03 this is being removed. Allow Lab team to flag a test to skip a test added to the Lab Sample if no longer needed</description>
    <label>(deprecated) Not Applicable</label>
    <type>Checkbox</type>
</CustomField>