ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Test_Result__c/fields/Tape_Code__c.field-meta.xml
<CustomField>
    <fullName>Tape_Code__c</fullName>
    <description>This is a text field for the lab technicians to make note of all tape codes for the tests for the sample</description>
    <label>Tape Code</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>