ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Test_Result__c/fields/Test_Date__c.field-meta.xml
<CustomField>
    <fullName>Test_Date__c</fullName>
    <description>This is the date the test was performed.</description>
    <label>Test Date</label>
    <type>Date</type>
</CustomField>