ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Test_Result__c/fields/Test_Result__c.field-meta.xml
<CustomField>
    <fullName>Test_Result__c</fullName>
    <description>This is the test result recorded by the lab tech</description>
    <label>Test Result</label>
    <length>131070</length>
    <type>Html</type>
</CustomField>