ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Test_Result__c/validationRules/DoNotUpdateIfLabSampleInApproval.validationRule-meta.xml
<ValidationRule>
    <fullName>DoNotUpdateIfLabSampleInApproval</fullName>
    <active>true</active>
    <description>If the Lab Sample is in the Approval Process (Status = Approved), block updates</description>
    <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &apos;System Administrator&apos;, 
OR(TEXT(Lab_Sample__r.Status__c) == &apos;Approved&apos;, TEXT(Lab_Sample__r.Status__c) == &apos;In Approval&apos;)
)</errorConditionFormula>
    <errorMessage>You cannot create or modify Lab Test Results once the Lab Sample has been submitted for approval or is approved.</errorMessage>
</ValidationRule>