ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Test_Result__c/listViews/Lab_Test_Queue.listView-meta.xml
<ListView>
    <fullName>Lab_Test_Queue</fullName>
    <columns>NAME</columns>
    <columns>Test_Status__c</columns>
    <columns>Lab_Sample__c</columns>
    <columns>Lab_Test__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Test_Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Not Required</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>11/16/2019 12:00 AM</value>
    </filters>
    <label>Lab Test Queue</label>
</ListView>